flip box assignment

--- a/block-BJaaep/code/style.css
+++ b/block-BJaaep/code/style.css
@@ -36,7 +36,7 @@ img {
 
 body {
   background: #f2f4f8;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-align: center;
 }
 
