--- a/block-BJaaer/code/style.css
+++ b/block-BJaaer/code/style.css
@@ -39,8 +39,8 @@ img {
 /* Main CSS */
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background: linear-gradient(to right, #7f53ac 0, #657ced 100%);
 }
 * {
@@ -55,7 +55,7 @@ body {
   margin-top: 2rem;
 }
 
-input[type='text'] {
+input[type="text"] {
   padding: 0.5rem 1rem;
   border: none;
   border: 1px solid rgba(0, 0, 0, 0.2);
@@ -85,9 +85,44 @@ p {
   display: flex;
   flex-direction: column;
 }
-input[type='text'] {
+input[type="text"] {
   width: 100%;
 }
 .terms {
   display: inline-block;
+}
+
+.modal {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0%;
+  padding: 1rem;
+  background: #a5a4a7c9;
+}
+.close {
+  display: inline-block;
+  width: 100%;
+  text-align: right;
+  cursor: pointer;
+  padding: 1rem;
+}
+.user-details {
+  padding: 1rem 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 50vh;
+  width: 60vw;
+  margin: auto auto;
+  background: white;
+  box-shadow: 5px 5px 12px rgb(85, 84, 84);
+}
+.user-details h1 {
+  font-style: 900;
+}
+.terms {
+  text-decoration: underline;
 }
